--- a/frontend/style/sass/components/_general.scss
+++ b/frontend/style/sass/components/_general.scss
@@ -1,3 +1,13 @@
+// Général
+
+// Police générale
 body {
+  font-family: "Roboto", "Arial";
+  font-size: 1.2em;
+  font-weight: 400;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  text-decoration: none;
   background-color: white;
 }
