--- a/frontend/style/sass/config/_variable.scss
+++ b/frontend/style/sass/config/_variable.scss
@@ -1,3 +1,6 @@
+// Mixin - Extenssion - Variables
+
+//Mise en forme
 .center {
   display: flex;
   align-items: center;
@@ -24,16 +27,3 @@
   display: flex;
   flex-wrap: initial;
 }
-
-body {
-  font-family: "Roboto", "Arial";
-  font-size: 1.2em;
-  font-weight: 400;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-  text-decoration: none;
-  background-color: white;
-}
-
-/*# sourceMappingURL=style.css.map */
