--- a/frontend/style/sass/style.scss
+++ b/frontend/style/sass/style.scss
@@ -3,10 +3,9 @@
 // Config
 @import "config/color";
 
+@import "config/variable";
+
 // Components
 @import "components/general";
 
-.classtest {
-  font-size: 12px;
-  color: $primaire;
-}
+@import "components/acceuil";
