1er versions up de la page produits

--- a/frontend/style/sass/style.scss
+++ b/frontend/style/sass/style.scss
@@ -8,4 +8,8 @@
 // Components
 @import "components/general";
 
-@import "components/acceuil";
+@import "components/conteneur";
+
+@import "components/header";
+
+@import "components/products";
