--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -36,4 +36,128 @@ body {
   background-color: white;
 }
 
+.header {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  height: 90px;
+  background-color: #eeeeec;
+}
+
+.header-under {
+  background-color: transparent;
+  width: 100%;
+  margin: auto;
+  height: 20px;
+  margin-bottom: 40px;
+  -webkit-box-shadow: inset 0px 7px 16px -16px #000000;
+  box-shadow: inset 0px 7px 16px -16px #000000;
+}
+
+.conteneur-product {
+  max-width: 1350px;
+  justify-content: center;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  border: 0px solid red;
+}
+
+.header-bloc {
+  display: flex;
+  width: 100%;
+  padding-left: 15px;
+  align-items: center;
+  border: 0px solid blue;
+}
+
+.header-title {
+  font-size: 2.5em;
+  color: #9800f0;
+}
+
+.product-bloc {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  background-color: #f6f6f6;
+  gap: 20px;
+  margin: 10px;
+  border-radius: 20px;
+  margin-bottom: 100px;
+  padding: 40px 30px 50px;
+}
+.product-bloc .product-category {
+  display: flex;
+  width: auto;
+  height: auto;
+  border: 0px solid blue;
+  font-size: 1.4em;
+  font-weight: 600;
+}
+.product-bloc .product-bloc-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: auto;
+  background-color: #f6f6f6;
+  justify-content: space-between;
+  gap: 30px;
+  border: 0px solid blue;
+}
+.product-bloc .product-bloc-grid .product-card {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  margin: 0px;
+  background-color: transparent;
+  border-radius: 16px 16px 16px 16px;
+  box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.1);
+}
+.product-bloc .product-bloc-grid .product-card .product-card-paddingratio {
+  padding-bottom: 56%;
+  height: auto;
+  width: 100%;
+  position: relative;
+}
+.product-bloc .product-bloc-grid .product-card .product-card-paddingratio img {
+  width: 100%;
+  height: 100%;
+  border-radius: 16px 16px 0px 0px;
+  object-fit: cover;
+  position: absolute;
+}
+.product-bloc .product-bloc-grid .product-card .product-card-text {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  min-height: 80px;
+  border-radius: 0px 0px 16px 16px;
+  background-color: white;
+}
+.product-bloc .product-bloc-grid .product-card .product-card-text-main {
+  display: flex;
+  width: 100%;
+  height: auto;
+  padding: 14px 12px 14px 12px;
+  border: blue solid 0px;
+  justify-content: space-between;
+}
+.product-bloc .product-bloc-grid .product-card .product-card-text-main-name {
+  font-size: 1.02em;
+  font-weight: 600;
+}
+.product-bloc .product-bloc-grid .product-card .product-card-text-main-price {
+  font-size: 1.02em;
+  font-weight: 600;
+}
+
+.product-desc {
+  font-size: 0.8em;
+  font-weight: 300;
+  color: #2b2b2b;
+}
+
 /*# sourceMappingURL=style.css.map */
