--- a/frontend/style/sass/style.scss
+++ b/frontend/style/sass/style.scss
@@ -12,4 +12,6 @@
 
 @import "components/header";
 
-@import "components/products";
+@import "components/product";
+
+@import "components/product-page";
