--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -12,19 +12,6 @@
   text-decoration: none;
 }
 
-.section_title {
-  color: #000000;
-  text-align: left;
-  font-size: 1.17em;
-  font-weight: 600;
-  margin-top: 23px;
-  margin-bottom: 25px;
-  font-family: "Roboto", "Arial";
-  user-select: none;
-  display: flex;
-  flex-wrap: initial;
-}
-
 body {
   font-family: "Roboto", "Arial";
   font-size: 1.2em;
@@ -66,29 +53,29 @@ body {
 .header-bloc {
   display: flex;
   width: 100%;
+  max-width: 1350px;
+  margin: auto;
   padding-left: 15px;
   align-items: center;
+  justify-content: left;
+  gap: 15px;
   border: 0px solid blue;
 }
 
 .header-title {
-  font-size: 2.5em;
-  color: #9800f0;
+  font-size: 2.3em;
+  color: black;
+  font-family: "Finger Paint", "Arial";
 }
 
-.product-bloc {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  height: 100%;
-  background-color: #f6f6f6;
-  gap: 20px;
-  margin: 10px;
-  border-radius: 20px;
-  margin-bottom: 100px;
-  padding: 40px 30px 50px;
+.header-icon {
+  font-size: 1.75em;
+  color: #ff9900;
+  position: relative;
+  top: 1px;
 }
-.product-bloc .product-category {
+
+.product-category {
   display: flex;
   width: auto;
   height: auto;
@@ -96,17 +83,8 @@ body {
   font-size: 1.4em;
   font-weight: 600;
 }
-.product-bloc .product-bloc-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  width: auto;
-  background-color: #f6f6f6;
-  justify-content: space-between;
-  gap: 30px;
-  border: 0px solid blue;
-}
-.product-bloc .product-bloc-grid .product-card {
+
+.product-card {
   display: flex;
   flex-direction: column;
   width: auto;
@@ -115,49 +93,172 @@ body {
   background-color: transparent;
   border-radius: 16px 16px 16px 16px;
   box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 }
-.product-bloc .product-bloc-grid .product-card .product-card-paddingratio {
+.product-card .product-card-paddingratio {
   padding-bottom: 56%;
   height: auto;
   width: 100%;
   position: relative;
 }
-.product-bloc .product-bloc-grid .product-card .product-card-paddingratio img {
+.product-card .product-card-paddingratio img {
   width: 100%;
   height: 100%;
   border-radius: 16px 16px 0px 0px;
   object-fit: cover;
   position: absolute;
 }
-.product-bloc .product-bloc-grid .product-card .product-card-text {
+.product-card .product-card-text {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 80px;
+  height: 100%;
   min-height: 80px;
   border-radius: 0px 0px 16px 16px;
   background-color: white;
+  border: blue solid 0px;
 }
-.product-bloc .product-bloc-grid .product-card .product-card-text-main {
+.product-card .product-card-text-main {
   display: flex;
-  width: 100%;
+  width: auto;
   height: auto;
-  padding: 14px 12px 14px 12px;
+  padding: 14px 13px 14px 13px;
   border: blue solid 0px;
   justify-content: space-between;
 }
-.product-bloc .product-bloc-grid .product-card .product-card-text-main-name {
-  font-size: 1.02em;
-  font-weight: 600;
+.product-card .product-card-text-main .product-card-text-main-name {
+  font-size: 0.97em;
+  font-weight: 500;
 }
-.product-bloc .product-bloc-grid .product-card .product-card-text-main-price {
-  font-size: 1.02em;
-  font-weight: 600;
+.product-card .product-card-text-main .product-card-text-main-price {
+  font-size: 0.97em;
+  font-weight: 500;
 }
-
-.product-desc {
+.product-card .product-text-desc {
   font-size: 0.8em;
   font-weight: 300;
-  color: #2b2b2b;
+  color: #3f3f3f;
+  text-align: justify;
+  padding: 0px 13px 23px 13px;
+}
+
+.product-bloc-grey {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  background-color: #f6f6f6;
+  gap: 20px;
+  margin-bottom: 100px;
+  padding: 40px 30px 40px;
+  border: 0px solid red;
+}
+
+.product-bloc-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: auto;
+  background-color: #f6f6f6;
+  justify-content: space-between;
+  gap: 30px;
+  border: 0px solid blue;
+}
+
+@media screen and (min-width: 670px) {
+  .product-bloc-grey {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: 100%;
+    background-color: #f6f6f6;
+    gap: 20px;
+    margin: 10px;
+    border-radius: 20px;
+    margin-bottom: 100px;
+    padding: 40px 30px 50px;
+  }
+
+  .product-bloc-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    width: auto;
+    background-color: #f6f6f6;
+    justify-content: space-between;
+    gap: 30px;
+    border: 0px solid blue;
+  }
+}
+@media screen and (min-width: 950px) {
+  .product-bloc-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    width: auto;
+    background-color: #f6f6f6;
+    justify-content: space-between;
+    gap: 30px;
+    border: 0px solid blue;
+  }
+}
+.product-page-bloc {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  border: 0px solid yellow;
+}
+.product-page-bloc .product-page-bloc-left {
+  display: flex;
+  grid-column: span 2;
+  border: 0px solid blue;
+  height: auto;
+  max-height: 700px;
+}
+.product-page-bloc .product-page-bloc-left .page-card-paddingratio {
+  padding-bottom: 67%;
+  height: auto;
+  width: 100%;
+  position: relative;
+}
+.product-page-bloc .product-page-bloc-left .page-card-paddingratio img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+.product-page-bloc .product-page-bloc-right {
+  display: flex;
+  border: 0px solid red;
+  height: auto;
+  padding-left: 30px;
+}
+
+.product-bloc-grey2 {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  background-color: #f6f6f6;
+  gap: 20px;
+  margin-bottom: 100px;
+  padding: 40px 30px 40px;
+  border: 0px solid red;
+}
+
+@media screen and (min-width: 670px) {
+  .product-bloc-grey2 {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: 100%;
+    background-color: #f6f6f6;
+    gap: 20px;
+    margin: 10px;
+    border-radius: 20px;
+    margin-bottom: 100px;
+    padding: 40px 30px 40px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
