ajout page produits

--- a/frontend/style/sass/components/_product.scss
+++ b/frontend/style/sass/components/_product.scss
@@ -68,7 +68,7 @@
   .product-text-desc {
     font-size: 0.8em;
     font-weight: 300;
-    color: #3f3f3f;
+    color: #484848;
     text-align: justify;
     padding: 0px 13px 23px 13px;
   }
