--- a/frontend/style/sass/components/_product-page.scss
+++ b/frontend/style/sass/components/_product-page.scss
@@ -31,9 +31,118 @@
 
   .product-page-bloc-right {
     display: flex;
+    flex-direction: column;
+    gap: 17px;
     border: 0px solid red;
     height: auto;
-    padding-left: 30px;
+    min-width: 330px;
+    padding: 10px 0px 0px 32px;
+  }
+
+  .product-page-bloc-right-head {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border: 0px solid blue;
+
+    .product-page-bloc-right-title {
+      display: flex;
+      width: auto;
+      height: auto;
+      border: 0px solid blue;
+      font-size: 1.4em;
+      font-weight: 600;
+    }
+
+    .product-page-bloc-right-price {
+      font-size: 1.15em;
+      font-weight: 600;
+    }
+  }
+
+  .product-page-bloc-right-desc {
+    font-size: 0.82em;
+    color: #535353;
+    text-align: justify;
+    margin-bottom: 18px;
+  }
+
+  .product-page-bloc-right-separator {
+    width: 100%;
+    height: 1px;
+    margin-bottom: 14px;
+    background-color: #c7c7c7;
+  }
+
+  .product-page-bloc-right-color {
+    font-size: 0.9em;
+    font-weight: 600;
+  }
+
+  .product-page-bloc-right-colors {
+    display: flex;
+    gap: 9px;
+    margin-bottom: 18px;
+  }
+
+  .product-page-bloc-right-color-circle {
+    border: 1px solid black;
+    height: 47px;
+    width: 47px;
+    border-radius: 10%;
+  }
+
+  .tan {
+    background-color: tan;
+  }
+
+  .chocolate {
+    background-color: rgb(109, 45, 0);
+  }
+
+  .brown {
+    background-color: rgb(182, 92, 33);
+  }
+
+  .black {
+    background-color: black;
+  }
+
+  .white {
+    background-color: #fff9f0;
+  }
+
+  .palebrown {
+    background-color: #8d654c;
+  }
+
+  .darkbrown {
+    background-color: #2c1f17;
+  }
+
+  .beige {
+    background-color: #ffd89d;
+  }
+
+  .blue {
+    background-color: #95b1ff;
+  }
+
+  .pink {
+    background-color: #ffa1e0;
+  }
+
+  .product-page-bloc-right-add {
+    width: 100%;
+    height: 61px;
+    border-radius: 30px;
+    background-color: black;
+    color: white;
+    font-size: 0.88em;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
