--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -220,6 +220,26 @@ body {
   height: auto;
   width: 100%;
   position: relative;
+  border-radius: 16px 16px 16px 16px;
+  box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.1);
+}
+.product-page-bloc .product-page-bloc-left .page-card-paddingratio .back-icon {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  min-width: 48px;
+  min-height: 48px;
+  background-color: #0000003a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 1.5em;
+  color: white;
+}
+.product-page-bloc .product-page-bloc-left .page-card-paddingratio .back-icon:hover {
+  color: white;
+  background-color: #0000004f;
 }
 .product-page-bloc .product-page-bloc-left .page-card-paddingratio img {
   width: 100%;
