--- a/frontend/style/sass/components/_product-page.scss
+++ b/frontend/style/sass/components/_product-page.scss
@@ -19,6 +19,28 @@
       height: auto;
       width: 100%;
       position: relative;
+      border-radius: 16px 16px 16px 16px;
+      box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.1);
+
+      .back-icon {
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        min-width: 48px;
+        min-height: 48px;
+        background-color: #0000003a;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        font-size: 1.5em;
+        color: white;
+      }
+
+      .back-icon:hover {
+        color: white;
+        background-color: #0000004f;
+      }
     }
 
     .page-card-paddingratio img {
