--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -50,6 +50,14 @@ body {
   border: 0px solid red;
 }
 
+.header-bloc-spacebetween {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1350px;
+  margin: auto;
+}
+
 .header-bloc {
   display: flex;
   width: 100%;
@@ -75,6 +83,54 @@ body {
   top: 1px;
 }
 
+.header-shop {
+  display: flex;
+  height: auto;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.45em;
+}
+
+.header-right {
+  display: flex;
+  position: relative;
+  bottom: 1px;
+  justify-content: space-between;
+  width: auto;
+  border: 0px solid black;
+  gap: 9px;
+}
+
+.espacesaisie {
+  width: 260px;
+  height: auto;
+  margin: auto;
+  border-radius: 30px;
+  padding-left: 47px;
+  padding-right: 16px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  font-size: 0.88em;
+  border: 0px solid transparent;
+}
+
+.icon-search {
+  position: relative;
+  top: 14px;
+  left: 43px;
+  font-size: 0.95em;
+}
+
+.display-search {
+  display: none;
+}
+
+@media screen and (min-width: 670px) {
+  .display-search {
+    display: initial;
+  }
+}
 .product-category {
   display: flex;
   width: auto;
@@ -229,7 +285,7 @@ body {
   left: 15px;
   min-width: 48px;
   min-height: 48px;
-  background-color: #0000003a;
+  background-color: #00000028;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -268,7 +324,7 @@ body {
   height: auto;
   border: 0px solid blue;
   font-size: 1.4em;
-  font-weight: 600;
+  font-weight: 500;
 }
 .product-page-bloc .product-page-bloc-right-head .product-page-bloc-right-price {
   font-size: 1.15em;
@@ -276,7 +332,7 @@ body {
 }
 .product-page-bloc .product-page-bloc-right-desc {
   font-size: 0.82em;
-  color: #535353;
+  color: #686868;
   text-align: justify;
   margin-bottom: 18px;
 }
