--- a/frontend/style/sass/components/_header.scss
+++ b/frontend/style/sass/components/_header.scss
@@ -1,3 +1,11 @@
+.header-bloc-spacebetween {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1350px;
+  margin: auto;
+}
+
 .header-bloc {
   display: flex;
   width: 100%;
@@ -21,4 +29,53 @@
   color: #ff9900;
   position: relative;
   top: 1px;
+}
+
+.header-shop {
+  display: flex;
+  height: auto;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.45em;
+}
+
+.header-right {
+  display: flex;
+  position: relative;
+  bottom: 1px;
+  justify-content: space-between;
+  width: auto;
+  border: 0px solid black;
+  gap: 9px;
+}
+
+.espacesaisie {
+  width: 260px;
+  height: auto;
+  margin: auto;
+  border-radius: 30px;
+  padding-left: 47px;
+  padding-right: 16px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  font-size: 0.88em;
+  border: 0px solid transparent;
+}
+
+.icon-search {
+  position: relative;
+  top: 14px;
+  left: 43px;
+  font-size: 0.95em;
+}
+
+.display-search {
+  display: none;
+}
+
+@media screen and (min-width: 670px) {
+  .display-search {
+    display: initial;
+  }
 }
