--- a/frontend/style/sass/components/_conteneur.scss
+++ b/frontend/style/sass/components/_conteneur.scss
@@ -24,3 +24,12 @@
   flex-direction: column;
   border: 0px solid red;
 }
+
+.footer {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  height: auto;
+  background-color: #eeeeec;
+  padding: 50px 0px 40px;
+}
