--- a/frontend/style/sass/components/_product-page.scss
+++ b/frontend/style/sass/components/_product-page.scss
@@ -123,7 +123,7 @@
   }
 
   .brown {
-    background-color: rgb(182, 92, 33);
+    background-color: #b36735;
   }
 
   .black {
@@ -147,11 +147,11 @@
   }
 
   .blue {
-    background-color: #95b1ff;
+    background-color: #acc2ff;
   }
 
   .pink {
-    background-color: #ffa1e0;
+    background-color: #ffb3e6;
   }
 
   .product-page-bloc-right-add {
