--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -99,6 +99,7 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 1.45em;
+  border: 0px solid black;
 }
 
 .header-right {
@@ -214,7 +215,7 @@ body {
   height: 100%;
   background-color: #f6f6f6;
   gap: 20px;
-  margin-bottom: 100px;
+  margin-bottom: 70px;
   padding: 40px 30px 40px;
   border: 0px solid red;
 }
@@ -240,7 +241,7 @@ body {
     gap: 20px;
     margin: 10px;
     border-radius: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     padding: 40px 30px 50px;
   }
 
@@ -255,7 +256,7 @@ body {
     border: 0px solid blue;
   }
 }
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1040px) {
   .product-bloc-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -416,7 +417,7 @@ body {
   height: 100%;
   background-color: #f6f6f6;
   gap: 20px;
-  margin-bottom: 100px;
+  margin-bottom: 70px;
   padding: 40px 30px 40px;
   border: 0px solid red;
 }
@@ -431,7 +432,7 @@ body {
     gap: 20px;
     margin: 10px;
     border-radius: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     padding: 40px 30px 40px;
   }
 }
