--- a/frontend/style/sass/components/_panier.scss
+++ b/frontend/style/sass/components/_panier.scss
@@ -8,12 +8,14 @@
 
 .panier-bloc-left {
   display: flex;
+  flex-direction: column;
   position: relative;
   grid-column: span 2;
   border: 0px solid blue;
   height: auto;
   max-height: 700px;
   padding-left: 54px;
+  gap: 10px;
 }
 
 .panier-bloc-right {
@@ -78,7 +80,7 @@
 
 .panier-bloc-right-separator2 {
   width: 100%;
-  height: 2px;
+  height: 1px;
   margin-bottom: 14px;
   margin-top: 14px;
   background-color: #000000;
@@ -86,7 +88,7 @@
 
 .back-icon2 {
   position: absolute;
-  top: -10px;
+  top: -12px;
   left: -10px;
   min-width: 46px;
   min-height: 46px;
@@ -103,12 +105,85 @@
   background-color: #0000004f;
 }
 
+.panier-bloc-list {
+  display: flex;
+  flex-direction: column;
+  border: 0px solid blue;
+  width: 100%;
+  height: 100%;
+  padding-top: 10px;
+  gap: 14px;
+}
+
+.panier-bloc-left-separator3 {
+  width: 97%;
+  height: 1px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  background-color: #cecece;
+}
+
+.panier-bloc-list-product {
+  display: flex;
+  width: 98%;
+  height: 120px;
+  border: 0px solid red;
+  border-radius: 13px;
+}
+
+.panier-bloc-list-product-text {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 15px 0px 15px;
+  border: 0px solid blue;
+  width: 100%;
+  height: auto;
+  gap: 5px;
+
+  .panier-bloc-left-head-flex {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border: 0px solid blue;
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
+
+  .panier-bloc-left-head-text {
+    font-size: 0.92em;
+  }
+}
+
+.panier-bloc-left-desc {
+  font-size: 0.86em;
+  color: #686868;
+  text-align: justify;
+  margin-bottom: 5px;
+}
+
+.panier-card-paddingratio {
+  height: auto;
+  max-height: 120px;
+  max-width: 120px;
+  width: 100%;
+  position: relative;
+  border-radius: 13px;
+  box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.1);
+}
+
+.panier-card-paddingratio img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0px 0px 0px 0px;
+  object-fit: cover;
+  position: absolute;
+}
+
 .panier-bloc-grey {
   display: flex;
   flex-direction: column;
   width: auto;
   height: 100%;
-  background-color: $grey;
   gap: 20px;
   margin-bottom: 80px;
   padding: 32px 30px 40px;
@@ -121,7 +196,6 @@
     flex-direction: column;
     width: auto;
     height: 100%;
-    background-color: $grey;
     gap: 20px;
     margin: 10px;
     border-radius: 20px;
