v1 de la page de confirmation de commande

--- a/frontend/style/sass/components/_panier.scss
+++ b/frontend/style/sass/components/_panier.scss
@@ -78,6 +78,10 @@
   align-items: center;
 }
 
+.panier-bloc-right-add:hover {
+  color: white;
+}
+
 .panier-bloc-right-separator2 {
   width: 100%;
   height: 1px;
