--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -48,6 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   border: 0px solid red;
+  padding: 20px;
 }
 
 .footer {
@@ -333,15 +334,15 @@ body {
   width: auto;
   height: auto;
   border: 0px solid blue;
-  font-size: 1.25em;
+  font-size: 1.15em;
   font-weight: 500;
 }
 .product-page-bloc .product-page-bloc-right-head .product-page-bloc-right-price {
-  font-size: 1.05em;
+  font-size: 0.97em;
   font-weight: 600;
 }
 .product-page-bloc .product-page-bloc-right-desc {
-  font-size: 0.82em;
+  font-size: 0.8em;
   color: #686868;
   text-align: justify;
   margin-bottom: 18px;
@@ -417,6 +418,7 @@ body {
   height: 100%;
   background-color: #f6f6f6;
   gap: 20px;
+  max-width: 1150px;
   margin-bottom: 80px;
   padding: 40px 30px 40px;
   border: 0px solid red;
@@ -430,7 +432,7 @@ body {
     height: 100%;
     background-color: #f6f6f6;
     gap: 20px;
-    margin: 10px;
+    margin: auto;
     border-radius: 20px;
     margin-bottom: 80px;
     padding: 40px 30px 40px;
@@ -513,6 +515,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.panier-bloc-right-add:hover {
+  color: white;
 }
 
 .panier-bloc-right-separator2 {
@@ -627,6 +633,58 @@ body {
 
 @media screen and (min-width: 670px) {
   .panier-bloc-grey {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: 100%;
+    gap: 20px;
+    margin: 10px;
+    border-radius: 20px;
+    margin-bottom: 80px;
+    padding: 32px 30px 40px;
+  }
+}
+.thanks-icon {
+  font-size: 3em;
+  color: #00944a;
+}
+
+.thanks-title {
+  font-size: 1.55em;
+  font-weight: 500;
+}
+
+.thanks-command {
+  padding: 20px;
+  border: 1px solid black;
+  color: black;
+  margin: auto;
+}
+
+.thanks-bloc {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  text-align: center;
+  height: auto;
+  gap: 25px;
+  border: 0px solid black;
+}
+
+.thanks-bloc-grey {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: auto;
+  height: 100%;
+  gap: 20px;
+  margin-bottom: 80px;
+  padding: 32px 30px 40px;
+  border: 0px solid red;
+}
+
+@media screen and (min-width: 670px) {
+  .thanks-bloc-grey {
     display: flex;
     flex-direction: column;
     width: auto;
