--- a/frontend/style/sass/components/_product-page.scss
+++ b/frontend/style/sass/components/_product-page.scss
@@ -72,18 +72,18 @@
       width: auto;
       height: auto;
       border: 0px solid blue;
-      font-size: 1.25em;
+      font-size: 1.15em;
       font-weight: 500;
     }
 
     .product-page-bloc-right-price {
-      font-size: 1.05em;
+      font-size: 0.97em;
       font-weight: 600;
     }
   }
 
   .product-page-bloc-right-desc {
-    font-size: 0.82em;
+    font-size: 0.8em;
     color: #686868;
     text-align: justify;
     margin-bottom: 18px;
@@ -175,6 +175,7 @@
   height: 100%;
   background-color: $grey;
   gap: 20px;
+  max-width: 1150px;
   margin-bottom: 80px;
   padding: 40px 30px 40px;
   border: 0px solid red;
@@ -188,7 +189,7 @@
     height: 100%;
     background-color: $grey;
     gap: 20px;
-    margin: 10px;
+    margin: auto;
     border-radius: 20px;
     margin-bottom: 80px;
     padding: 40px 30px 40px;
