--- a/frontend/style/sass/components/_thanks.scss
+++ b/frontend/style/sass/components/_thanks.scss
@@ -17,13 +17,18 @@
   margin: auto;
 }
 
+.thanks-desc {
+  color: grey;
+  font-size: 0.85em;
+}
+
 .thanks-bloc {
   display: flex;
   flex-direction: column;
   margin: auto;
   text-align: center;
   height: auto;
-  gap: 25px;
+  gap: 26px;
   border: 0px solid black;
 }
 
