--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -645,10 +645,21 @@ body {
   }
 }
 .thanks-icon {
-  font-size: 3em;
+  font-size: 2.8em;
   color: #00944a;
 }
 
+@keyframes rotation {
+  0% {
+    transform: rotateZ(120deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateZ(360deg);
+    animation-timing-function: ease;
+    opacity: 1;
+  }
+}
 .thanks-title {
   font-size: 1.55em;
   font-weight: 500;
