--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -292,17 +292,17 @@ body {
 }
 .product-page-bloc .product-page-bloc-left .page-card-paddingratio .back-icon {
   position: absolute;
-  top: 15px;
-  left: 15px;
-  min-width: 48px;
-  min-height: 48px;
-  background-color: #00000028;
+  top: 0px;
+  left: -64px;
+  min-width: 44px;
+  min-height: 44px;
+  background-color: #00000000;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  font-size: 1.5em;
-  color: white;
+  font-size: 1.3em;
+  color: black;
 }
 .product-page-bloc .product-page-bloc-left .page-card-paddingratio .back-icon:hover {
   color: white;
@@ -420,7 +420,7 @@ body {
   gap: 20px;
   max-width: 1150px;
   margin-bottom: 80px;
-  padding: 40px 30px 40px;
+  padding: 40px 30px 40px 80px;
   border: 0px solid red;
 }
 
@@ -435,7 +435,7 @@ body {
     margin: auto;
     border-radius: 20px;
     margin-bottom: 80px;
-    padding: 40px 30px 40px;
+    padding: 40px 30px 40px 80px;
   }
 }
 .panier-bloc {
