--- a/frontend/style/sass/components/_product-page.scss
+++ b/frontend/style/sass/components/_product-page.scss
@@ -24,17 +24,17 @@
 
       .back-icon {
         position: absolute;
-        top: 15px;
-        left: 15px;
-        min-width: 48px;
-        min-height: 48px;
-        background-color: #00000028;
+        top: 0px;
+        left: -64px;
+        min-width: 44px;
+        min-height: 44px;
+        background-color: #00000000;
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
-        font-size: 1.5em;
-        color: white;
+        font-size: 1.3em;
+        color: black;
       }
 
       .back-icon:hover {
@@ -177,7 +177,7 @@
   gap: 20px;
   max-width: 1150px;
   margin-bottom: 80px;
-  padding: 40px 30px 40px;
+  padding: 40px 30px 40px 80px;
   border: 0px solid red;
 }
 
@@ -192,6 +192,6 @@
     margin: auto;
     border-radius: 20px;
     margin-bottom: 80px;
-    padding: 40px 30px 40px;
+    padding: 40px 30px 40px 80px;
   }
 }
