--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -48,7 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   border: 0px solid red;
-  padding: 20px;
+  padding: 0px;
 }
 
 .footer {
@@ -60,6 +60,11 @@ body {
   padding: 45px 0px 30px;
 }
 
+@media screen and (min-width: 670px) {
+  .conteneur-product {
+    padding: 20px;
+  }
+}
 .header-bloc-spacebetween {
   display: flex;
   justify-content: space-between;
@@ -217,7 +222,7 @@ body {
   background-color: #f6f6f6;
   gap: 20px;
   margin-bottom: 80px;
-  padding: 40px 30px 40px;
+  padding: 40px 30px 50px;
   border: 0px solid red;
 }
 
@@ -293,7 +298,7 @@ body {
 .product-page-bloc .product-page-bloc-left .page-card-paddingratio .back-icon {
   position: absolute;
   top: 0px;
-  left: -64px;
+  left: -62px;
   min-width: 44px;
   min-height: 44px;
   background-color: #00000000;
@@ -301,7 +306,7 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  font-size: 1.3em;
+  font-size: 1.2em;
   color: black;
 }
 .product-page-bloc .product-page-bloc-left .page-card-paddingratio .back-icon:hover {
