--- a/frontend/style/sass/components/_conteneur.scss
+++ b/frontend/style/sass/components/_conteneur.scss
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   border: 0px solid red;
-  padding: 20px;
+  padding: 0px;
 }
 
 .footer {
@@ -33,4 +33,10 @@
   height: auto;
   background-color: #eeeeec;
   padding: 45px 0px 30px;
+}
+
+@media screen and (min-width: 670px) {
+  .conteneur-product {
+    padding: 20px;
+  }
 }
