--- a/frontend/style/sass/components/_product-page.scss
+++ b/frontend/style/sass/components/_product-page.scss
@@ -126,6 +126,10 @@
     padding: 11px;
   }
 
+  .product-page-bloc-right-color-div-selected {
+    background-color: blue !important;
+  }
+
   .tan {
     background-color: tan;
   }
