--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -384,9 +384,6 @@ body {
   font-weight: 300;
   padding: 11px;
 }
-.product-page-bloc .product-page-bloc-right-color-div-selected {
-  background-color: blue !important;
-}
 .product-page-bloc .tan {
   background-color: tan;
 }
@@ -558,8 +555,8 @@ body {
 .panier-bloc-right-separator2 {
   width: 100%;
   height: 1px;
-  margin-bottom: 14px;
-  margin-top: 14px;
+  margin-bottom: 11px;
+  margin-top: 11px;
   background-color: #000000;
 }
 
@@ -680,7 +677,7 @@ body {
     padding: 32px 30px 40px;
   }
 }
-.DeleteButton {
+.deleteButton {
   display: flex;
   gap: 6px;
   font-size: 0.86em;
