--- a/frontend/style/sass/components/_panier.scss
+++ b/frontend/style/sass/components/_panier.scss
@@ -84,8 +84,8 @@
 .panier-bloc-right-separator2 {
   width: 100%;
   height: 1px;
-  margin-bottom: 14px;
-  margin-top: 14px;
+  margin-bottom: 11px;
+  margin-top: 11px;
   background-color: #000000;
 }
 
@@ -209,7 +209,7 @@
   }
 }
 
-.DeleteButton {
+.deleteButton {
   display: flex;
   gap: 6px;
   font-size: 0.86em;
