--- a/frontend/style/sass/components/_panier.scss
+++ b/frontend/style/sass/components/_panier.scss
@@ -27,6 +27,13 @@
   padding: 0px 0px 0px 32px;
 }
 
+.panier-bloc-left-head-div {
+  display: flex;
+  justify-content: space-between;
+  border: 0px solid black;
+  margin-bottom: 0px;
+}
+
 .panier-bloc-right-flex {
   display: flex;
   width: 100%;
@@ -114,7 +121,7 @@
   border: 0px solid blue;
   width: 100%;
   height: 100%;
-  padding-top: 10px;
+  padding-top: 0px;
   gap: 14px;
 }
 
@@ -164,6 +171,19 @@
   color: #575757;
   text-align: justify;
   margin-bottom: 5px;
+  border: 0px solid blue;
+}
+
+.deleteAll {
+  font-size: 0.8em;
+  color: black;
+  text-align: justify;
+  margin-right: 17px;
+  padding: 8px;
+}
+
+.deleteAll:hover {
+  color: #802a2a;
 }
 
 .panier-card-paddingratio {
