--- a/frontend/style/sass/components/_panier.scss
+++ b/frontend/style/sass/components/_panier.scss
@@ -6,6 +6,54 @@
   border: 0px solid black;
 }
 
+.panier-bloc-bottom {
+  grid-column: span 3;
+  border: 0px solid blue;
+  display: flex;
+  flex-direction: column;
+  padding: 35px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-radius: 20px;
+  background-color: #eeeeec;
+  font-size: 0.88em;
+  width: 600px;
+  margin: auto;
+  margin-top: 40px;
+}
+
+.panier-bloc-bottom-column {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  border: 0px solid black;
+}
+
+.panier-bloc-bottom-line {
+  display: flex;
+  margin-bottom: 3px;
+  margin-top: 3px;
+  gap: 18px;
+  border: 0px solid blue;
+}
+
+.central-bloc {
+  margin-top: 8px;
+  margin-bottom: 23px;
+  border: 0px solid black;
+}
+
+.central-bloc-1 {
+  margin: auto;
+  width: 530px;
+}
+
+.panier-bloc-bottom-input {
+  width: 250px;
+  font-size: 0.9em;
+  border: 1px solid black;
+}
+
 .panier-bloc-left {
   display: flex;
   flex-direction: column;
@@ -14,6 +62,7 @@
   border: 0px solid blue;
   height: auto;
   padding-left: 54px;
+  padding-right: 18px;
   gap: 10px;
 }
 
@@ -82,6 +131,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
+}
+// display none car il s'agit de l'ancien affichage sans formulaire
+
+.panier-bloc-bottom-add {
+  width: 305px;
+  margin-top: 25px;
+  height: 61px;
+  border-radius: 30px;
+  background-color: black;
+  color: white;
+  font-size: 0.88em;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .panier-bloc-right-add:hover {
