formualaire avec les bon logs des infos nécessaire, manque le get data et l'utilisation du back end

--- a/frontend/style/css/reset.css
+++ b/frontend/style/css/reset.css
@@ -146,6 +146,10 @@ button:active {
   -webkit-tap-highlight-color: transparent;
 }
 
+input {
+  border: none;
+}
+
 /* Reset link color bellow */
 a,
 a:hover,
