--- a/frontend/style/sass/components/_thanks.scss
+++ b/frontend/style/sass/components/_thanks.scss
@@ -22,7 +22,7 @@
 }
 
 .thanks-title {
-  font-size: 1.55em;
+  font-size: 1.5em;
   font-weight: 500;
 }
 
@@ -35,8 +35,9 @@
 }
 
 .thanks-desc {
-  color: grey;
+  color: #4e4e4e;
   font-size: 0.85em;
+  margin-bottom: 5px;
 }
 
 .thanks-bloc {
@@ -90,4 +91,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#OderIdNumber {
+  color: #124630;
 }
